--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Utilities for reading and writing CSV ",
     "keywords": ["csv"],
     "homepage": "https://github.com/k-holy/Volcanus_Csv",
-    "version": "1.0.3",
+    "version": "1.1.0",
     "license": "MIT",
     "authors": [
         {
@@ -14,8 +14,7 @@
     ],
     "require": {
         "php": ">=5.3",
-        "ext-mbstring" : "*",
-        "volcanus/configuration": "dev-master"
+        "ext-mbstring" : "*"
     },
     "autoload": {
         "psr-0": { "Volcanus\\Csv": "" }
