--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Utilities for reading and writing CSV ",
     "keywords": ["csv"],
-    "homepage": "https://github.com/k-holy/Volcanus_Csv",
+    "homepage": "https://github.com/k-holy/volcanus-csv",
     "version": "1.1.0",
     "license": "MIT",
     "authors": [
@@ -12,12 +12,11 @@
             "email": "k.holy74@gmail.com"
         }
     ],
-    "require": {
-        "php": ">=5.3",
-        "ext-mbstring" : "*"
-    },
     "autoload": {
-        "psr-0": { "Volcanus\\Csv": "" }
+        "psr-4": { "Volcanus\\Csv\\": "src/" }
     },
-    "target-dir": "Volcanus/Csv"
+    "require": {
+        "php": ">=5.3.3",
+        "ext-mbstring" : "*"
+    }
 }
