--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,24 @@
 language: php
 
 php:
-  - 5.3.3
-  - 5.3
-  - 5.4
-  - 5.5
   - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
+
+cache:
+  directories:
+    - vendor
+    - $HOME/.composer/cache
+env:
+  matrix:
+    - DEPENDENCIES=""
+    - DEPENDENCIES="--prefer-lowest --prefer-stable"
 
 before_script:
   - composer self-update
   - composer require satooshi/php-coveralls:0.* --dev
-  - composer install --dev --no-interaction --prefer-source
+  - composer update $DEPENDENCIES
 
 script:
   - mkdir -p build/logs
